Deployment/jobs-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: es-jobs-service
    env: test
    country: es
  name: es-jobs-service
  namespace: test
spec:
  selector:
    app: es-jobs-service
    env: test
  ports:
  - name: http
    port: 8080
    targetPort: 8080
