Deployment/jobs-service-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
    nginx.ingress.kubernetes.io/auth-tls-secret: test/pkiv01-es-test-rootca-cert
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
  labels:
    app: es-jobs-service
    env: test
  name: es-jobs-service
  namespace: test
spec:
  rules:
  - host: jobservice-es-test.myvdf-internal.aws.cps.vodafone.com
    http:
      paths:
      - backend:
          serviceName: es-jobs-service
          servicePort: 8080
        path: /
  - host: jobservice-es-test.myvdf.aws.cps.vodafone.com
    http:
      paths:
      - backend:
          serviceName: es-jobs-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - jobservice-es-test.myvdf-internal.aws.cps.vodafone.com
    secretName: pkiv01-es-test-wildcard-cert
  - hosts:
    - jobservice-es-test.myvdf.aws.cps.vodafone.com
    secretName: myvdf-certificate	
status:
  loadBalancer:
    ingress:
    - {}
